fix bug #33222 (segfault when CURL handle is closed in a callback). fix segfaults when CURL callback functions throw exception.